@@ -1,3 +1,7 @@
+2002-07-30  Alan Modra  <amodra@bigpond.net.au>
+
+	* elfxx-ia64.c (elfNN_ia64_final_write_processing): Set e_flags.
+
 2002-07-26  Chris Demetriou  <cgd@broadcom.com>
 
 	* elfxx-mips.c (_bfd_mips_elf_merge_private_bfd_data): Merge ASE
